fix up slider background not showing added Yui Drag and Drop behavior added DynamicAjaxTabbedPanel based on AjaxTabbedPanel that allows dynamic adding of tabs, editableLabel and Drag Drop re-ordering of tabs added Example for Dynamic Tabbed Panel
git-svn-id: file:///home/igor/dev/stuff/svnbackup/trunk/wicketstuff-core@4582 ef7698a4-5110-0410-9fc6-c7eb3693863f

--- a/yui-parent/yui-examples/src/main/webapp/style.css
+++ b/yui-parent/yui-examples/src/main/webapp/style.css
@@ -352,4 +352,15 @@ span.tabpanel3 div.tab-row li.selected a {
   color:#A56060;
   }
 
- 
+/* dynamic tabbed panel */
+a.remove {
+    background: url(images/24icons.gif) no-repeat 0 -50px;
+    padding: 3px 10px;
+    text-decoration: none;
+}
+
+a.add {
+	background: url(images/24icons.gif) no-repeat 0 -75px;
+    padding: 3px 10px;
+    text-decoration: none;
+}
